--- a/Messenger/app/GoogleService-Info.plist
+++ b/Messenger/app/GoogleService-Info.plist
@@ -3,34 +3,32 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>945797345028-tiqh57vsd2nc0k086kdu0i4e6vnbp1ea.apps.googleusercontent.com</string>
+	<string>412946191780-dl62cfqr7tv9su07qpaptssll57f4g5r.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.945797345028-tiqh57vsd2nc0k086kdu0i4e6vnbp1ea</string>
+	<string>com.googleusercontent.apps.412946191780-dl62cfqr7tv9su07qpaptssll57f4g5r</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDbHfpa1aLQ-8k4svNieHEmybl-9NXML_A</string>
+	<string>AIzaSyAJpK-fOaq90StWoT9hH7Z9uqNlBPmeZ4U</string>
 	<key>GCM_SENDER_ID</key>
-	<string>945797345028</string>
+	<string>412946191780</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.relatedcode.messenger</string>
+	<string>com.whereyouapp.squirrelly</string>
 	<key>PROJECT_ID</key>
-	<string>messenger62-fd84c</string>
+	<string>squirrellyapp</string>
 	<key>STORAGE_BUCKET</key>
-	<string>messenger62-fd84c.appspot.com</string>
+	<string>squirrellyapp.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:945797345028:ios:60cdedfe52969cb8f1ea51</string>
-	<key>DATABASE_URL</key>
-	<string>https://messenger62-fd84c.firebaseio.com</string>
+	<string>1:412946191780:ios:af8b4b6231a7435a3ddd31</string>
 </dict>
 </plist>
